# classic_cs_problems

./: .gitignore  README.md  pyproject.toml  rest.mustache
classic_cs_problems/: __init__.py
classic_cs_problems/chapter_1/: calculating_pi.py  fibonacci.py  hanoi.py  trivial_compression.py  unbreakable_encryption.py
classic_cs_problems/chapter_2/: dna_search.py  generic_search.py  maze.py
tests/chapter_1/: test_fibonacci.py
tests/chapter_2/: test_dna_search.py  test_generic_search.py  test_maze.py
